--- a/resources/views/auth/register.ejs
+++ b/resources/views/auth/register.ejs
@@ -1,13 +1,16 @@
 <section class="login flex justify-center pt-24">
     <div class="w-full max-w-xs">
         <form action="/register" method="POST" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+            <!-- here we are displaying the error if any one of the 3 feilds is not filled -->
             <% if(messages.error) { %>
-            <span class="text-red-500 text-sm"><%= messages.error %></span>
+            <span class="text-red-500 text-sm"><%= messages.error %></span> 
             <% } %>
             <div class="mb-4">
                 <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
                     Name
                 </label>
+                <!-- here 'name' which we declared will be same sent to server and inside value we will write which we want to display after the page is refresed or when we have not filled all the fields -->
+                <!-- and also we get this from authcontroller in the flash part  -->
                 <input name="name" value="<%= messages.name  %>"
                     class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                     id="username" type="text" placeholder="Enter your name">
