real time communication using socket.io is implemented

--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -43,6 +43,8 @@
     <!-- this is the part or the body which we want dynamically and the navbar is fixed in all the pages -->
     <%- body %> 
     <footer></footer>
+    <!-- this is used to import socket lib from server to the client side to use it -->
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/js/app.js"></script>
 </body>
 </html>
