--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
-$primary: #FE5F1E;
-$primary-hover: #b23301;
+$primary: #2dc519;
+$primary-hover: #FE5F1E;
 $secondary: #F8F8F8;
 $pure: #fff;
 $dark: #232323;
@@ -8,3 +8,5 @@ $gray: #ccc;
 
 // Transition 
 $smooth: all .3s ease-in-out;
+//#FE5F1E
+//#b23301
